finished refactoring maybe few responsive changes are needed to be completed in the feature

--- a/index.html
+++ b/index.html
@@ -353,76 +353,62 @@
     <section class="destination recent-destination-container padding-top-bottom">
         <div class="container">
             <div class="destination-text">
-                <h2 style="width: 100%; display: block; " class="about-h2">Recent Trips</h2>
+                <h2 class="custom__text text-center">Recent Trips</h2>
             </div>
-            <section class="destination-images-container">
-                <article class="destination-image-holder seventeen-percent">
+            <section class="row justify-content-center align-content-center">
+                <article class="destination-image-holder col-sm-12 col-md-6 col-lg-4 position-relative my-4">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place5.jpg" alt="place-1">
-                    </div>
-                    <div class="hero-image-text">
-                        <div class="place-name-text">
-                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        <div class="place-name-text hero-image-text  ">
+                            <h3 class="p-3"><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </article>
-                <article class="destination-image-holder">
+                <article class="destination-image-holder col-sm-12 col-md-6 col-lg-4 position-relative my-4">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place2.jpg" alt="place-2">
-                    </div>
-                    <div class="hero-image-text">
-                        <div class="place-name-text">
-                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        <div class="place-name-text hero-image-text  ">
+                            <h3 class="p-3"><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </article>
-                <article class="destination-image-holder ">
+                <article class="destination-image-holder col-sm-12 col-md-6 col-lg-4 position-relative my-4">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place3.jpg" alt="place-3">
-                    </div>
-                    <div class="hero-image-text">
-                        <div class="place-name-text">
-                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        <div class="place-name-text hero-image-text  ">
+                            <h3 class="p-3"><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </article>
-                <article class="destination-image-holder seventeen-percent">
+                <article class="destination-image-holder col-sm-12 col-md-6 col-lg-4 position-relative my-4">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place1.jpg" alt="place-4">
-                    </div>
-                    <div class="hero-image-text">
-                        <div class="place-name-text">
-                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        <div class="place-name-text hero-image-text  ">
+                            <h3 class="p-3"><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </article>
-                <article class="destination-image-holder ">
+                <article class="destination-image-holder col-sm-12 col-md-6 col-lg-4 position-relative my-4">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place5.jpg" alt="place-3">
-                    </div>
-                    <div class="hero-image-text">
-                        <div class="place-name-text">
-                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        <div class="place-name-text hero-image-text  ">
+                            <h3 class="p-3"><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </article>
-                <article class="destination-image-holder ">
+                <article class="destination-image-holder col-sm-12 col-md-6 col-lg-4 position-relative my-4">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place2.jpg" alt="place-3">
-                    </div>
-                    <div class="hero-image-text">
-                        <div class="place-name-text">
-                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        <div class="place-name-text hero-image-text  ">
+                            <h3 class="p-3"><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </article>
-                <article class="destination-image-holder ">
+                <article class="destination-image-holder col-sm-12 col-md-6 col-lg-4 position-relative my-4">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place1.jpg" alt="place-3">
-                    </div>
-                    <div class="hero-image-text">
-                        <div class="place-name-text">
-                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
+                        <div class="place-name-text hero-image-text  ">
+                            <h3 class="p-3"><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </article>
