--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <!--end  price -->
 
     <!-- start subscribe section-->
-    <section class="subscribe padding-top-bottom ">
+    <section class="subscribe padding-top-bottom text-center">
         <div class="hero-image-subscribe">
             <div class="container">
                 <div style="height: 450px;" class=" row justify-content-center align-items-center">
@@ -503,12 +503,16 @@
                         <h2 style="  opacity: .9;  color: whitesmoke; " class="subscribe__title text-center ">Subscribe to the news list</h2>
                         <p style="opacity: .9;  color: whitesmoke; " class="text-center mt-3 text-center lead">Get the latest and greatest deals from our agency delivered straight to your inbox. </p>
                         <div class=" mt-3 text-center">
-                            <div class="row justify-content-center w-100  m-0">
+                            <!-- <div class="row justify-content-center w-100  m-0">
                                 <input style="margin: 0;" class="col-sm-6 col-md-5 mt-3 ml-3 col-lg-4" autocomplete="on" required type="email" placeholder="Enter your email">
                                 <label hidden for="subscribe">subscribe</label>
                                 <input class="col-sm-6 col-md-3  ml-3 mt-3 col-lg-2" id="subscribe" name="subscribe" type="submit" value="subscribe">
-                            </div>
-
+                            </div> -->
+                            <form class="form-inline text-center justify-content-center">
+                                <label hidden for="subscribe">subscribe</label>
+                                <input class="form-control mt-0 mb-0 px-3 mr-2" autocomplete="on" required type="email" placeholder="Enter your email">
+                                <button class="btn btn-light text-uppercase font-weight-bold">subscribe</button>
+                            </form>
                         </div>
                     </div>
                 </div>
